--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "sideEffects": [],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "nodemon --watch webpack.dev.js --exec \"webpack-dev-server --open --config webpack.dev.js\"",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack --config webpack.dev.js",
     "check-types": "tsc"
@@ -35,8 +35,12 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "nodemon": "^2.0.2",
+    "purgecss-webpack-plugin": "^2.0.5",
     "style-loader": "^1.1.2",
     "typescript": "^3.7.4",
     "webpack": "^4.41.4",
@@ -46,7 +50,9 @@
   },
   "dependencies": {
     "antd": "^3.26.5",
+    "less": "^3.10.3",
     "lodash-es": "^4.17.15",
+    "purecss": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
